# fuel-hyperlane-integration

./: .gitignore  Cargo.toml  Forc.toml  README.md  fuel-toolchain.toml
contracts/gas-oracle/: Cargo.toml  Forc.toml
contracts/gas-oracle/src/: main.sw
contracts/gas-oracle/tests/: harness.rs
contracts/hooks/aggregation/: Cargo.toml  Forc.toml
contracts/hooks/aggregation/src/: main.sw
contracts/hooks/aggregation/tests/: harness.rs
contracts/hooks/fallback-domain-routing-hook/: Cargo.toml  Forc.toml
contracts/hooks/fallback-domain-routing-hook/src/: main.sw
contracts/hooks/fallback-domain-routing-hook/tests/: harness.rs
contracts/hooks/gas-paymaster/: Cargo.toml  Forc.toml
contracts/hooks/gas-paymaster/src/: main.sw
contracts/hooks/gas-paymaster/tests/: harness.rs
contracts/hooks/igp/: Cargo.toml  Forc.toml
contracts/hooks/igp/src/: main.sw
contracts/hooks/igp/tests/: harness.rs
contracts/hooks/merkle-tree-hook/: Cargo.toml  Forc.toml
contracts/hooks/merkle-tree-hook/src/: main.sw
contracts/hooks/merkle-tree-hook/tests/: harness.rs
contracts/hooks/pausable-hook/: Cargo.toml  Forc.toml
contracts/hooks/protocol-fee/: Cargo.toml  Forc.toml
contracts/hooks/token-router/: Forc.toml
contracts/igp/: Forc.toml
contracts/igp/gas-oracle/: Cargo.toml  Forc.toml
contracts/igp/gas-oracle/src/: main.sw
contracts/igp/gas-oracle/tests/: harness.rs
contracts/igp/gas-paymaster/: Cargo.toml  Forc.toml
contracts/interfaces/: Forc.toml
contracts/interfaces/src/: aggregation_ism.sw  claimable.sw  events.sw  gas_oracle.sw  gas_router.sw  hooks.sw  igp.sw  ism.sw  isms.sw  lib.sw  mailbox.sw  merkle_tree_hook.sw  message_recipient.sw  multisig_ism.sw  ownable.sw  post_dispatch_hook.sw  router.sw  routing_ism.sw  token_router.sw  va.sw  warp_route.sw  warp_router.sw
contracts/ism-test/: Forc.toml
contracts/ism-test/src/: main.sw
contracts/ism/aggregation-ism/: Cargo.toml  Forc.toml
contracts/ism/aggregation-ism/src/: main.sw
contracts/ism/aggregation-ism/tests/: harness.rs
contracts/ism/multisig-ism/: Forc.toml
contracts/ism/multisig-ism-metadata/: Forc.toml
contracts/ism/multisig/merkle-root-multisig-ism/: Cargo.toml  Forc.toml
contracts/ism/multisig/merkle-root-multisig-ism/src/: main.sw
contracts/ism/multisig/merkle-root-multisig-ism/tests/: harness.rs
contracts/ism/multisig/message-id-multisig-ism/: Cargo.toml  Forc.toml
contracts/ism/multisig/message-id-multisig-ism/src/: main.sw
contracts/ism/multisig/message-id-multisig-ism/tests/: harness.rs
contracts/ism/pausable-ism/: Cargo.toml  Forc.toml
contracts/ism/routing/domain-routing-ism/: Cargo.toml  Forc.toml
contracts/ism/routing/domain-routing-ism/src/: main.sw
contracts/ism/routing/domain-routing-ism/tests/: harness.rs
contracts/libs/checkpoint/: Forc.toml
contracts/libs/merkle/: Forc.toml  README.md
contracts/libs/message/: Forc.toml
contracts/libs/std-hook-metadata/: Forc.toml
contracts/mailbox/: Cargo.toml  Forc.toml  build_and_test.sh
contracts/mailbox/src/: main.sw
contracts/mailbox/tests/: harness.rs
contracts/merkle/: Forc.toml
contracts/merkle-test/: Forc.toml
contracts/merkle-test/src/: main.sw
contracts/merkle/src/: lib.sw  main.sw  merkle_test_abi.sw  storage_merkle_tree.sw
contracts/message/src/: lib.sw
contracts/mock-post-dispatch/: Forc.toml
contracts/mock-post-dispatch/src/: main.sw
contracts/mocks/mock-msg-recipient/: Forc.toml
contracts/mocks/mock-post-dispatch/: Forc.toml
contracts/msg-recipient-test/: Forc.toml
contracts/msg-recipient-test/src/: main.sw
contracts/multisig-ism/: Forc.toml
contracts/multisig-ism-metadata/: Forc.toml
contracts/multisig-ism-metadata/src/: main.sw
contracts/multisig-ism/src/: main.sw
contracts/recipient/: Forc.toml
contracts/recipient/src/: main.sw
contracts/std-lib-extended/: Forc.toml
contracts/std-lib-extended/src/: bytes.sw  lib.sw  mem copy 2.sw  mem copy.sw  mem.sw
contracts/test/ism-test/: Forc.toml
contracts/test/mailbox-test/: Forc.toml
contracts/test/merkle-root-multisig-ism-test/: Forc.toml
contracts/test/merkle-test/: Cargo.toml  Forc.toml
contracts/test/merkle-test/src/: main.sw  merkle_test_abi.sw
contracts/test/merkle-test/tests/: harness.rs
contracts/test/message-id-multisig-ism-test/: Forc.toml
contracts/test/msg-recipient-test/: Forc.toml
contracts/test/src20-test/: Forc.toml
contracts/validator-announce/: .gitignore  Cargo.toml  Forc.toml  README.md
contracts/validator-announce/src/: helper.sw  main.sw
contracts/validator-announce/tests/: harness.rs
contracts/warp-route/: Cargo.toml  Forc.toml
contracts/warp-route/src/: main.sw
contracts/warp-route/tests/: harness.rs
demo/: .env.example  Cargo.toml  run-demo.sh  update-blocks.sh
demo/evm-abis/: HypERC20Collateral.json  Recipient.json
demo/evm-abis/configs/: old-warp-routes.yaml  warp-route-deployment.yaml
demo/src/: contracts.rs  helper.rs  main.rs
demo/warp/: all_routes.json
demo/warp_routes/: all_routes.json  basesepolia_routes.json  sepolia_routes.json
demo/warp_routes/configs/: basesepolia-bridged.yaml  basesepolia-collateral-usdc.yaml
deploy/: .env.example  .gitignore  Cargo.toml  rebuild_run.sh
deploy/src/: abis.rs  deployers.rs  dump.rs  env.rs  main.rs
e2e/: .env.example  .gitignore  Cargo.toml
e2e/configs/local-test/: plume.yaml  sepolia.yaml
e2e/scripts/: deploy-evm-local.sh
e2e/src/: main.rs
e2e/src/cases/: asset_recieve.rs  asset_send.rs  asset_send_with_gas.rs  bridged_asset_recieve.rs  bridged_asset_send.rs  collateral_asset_recieve.rs  collateral_asset_send.rs  example_test.rs  gas_overpayment_and_claim.rs  hooks_setup.rs  ism_test_something.rs  mailbox_config.rs  mailbox_get_domain.rs  (+11 more)
infra/: .env.example  README.md  run-val.sh  run.sh
infra/configs/: agent-config-local.json  agent-config.json  core-config.yaml  warp-route-collateral.yaml  warp-route-native.yaml  warp-route-synthetic.yaml  wr-for-ism.yaml
infra/fuel-node/: Cargo.toml
scripts/deploy_erc20/: Cargo.toml
test-utils/: Cargo.toml
test-utils/src/: lib.rs
(+91 files in other folders)
