[workspace]
resolver = "2"
members = [
    "contracts/mailbox",
    "test-utils",
    "deploy",
    "e2e",
    "contracts/hooks/merkle-tree-hook",
    "contracts/hooks/igp",
    "contracts/test/merkle-test",
    "contracts/ism/aggregation-ism",
    "contracts/ism/routing/domain-routing-ism",
    "contracts/ism/routing/default-fallback-domain-routing-ism",
    "contracts/ism/multisig/message-id-multisig-ism",
    "contracts/ism/multisig/merkle-root-multisig-ism",
    "contracts/igp/gas-oracle",
    "contracts/igp/gas-paymaster",
]


[workspace.dependencies]
# TODO update and resolve broken harness imports
fuels = "0.65.1"
ethers = { git = "https://github.com/hyperlane-xyz/ethers-rs", tag = "2024-04-25" }
hyperlane-core = { git = "https://github.com/hyperlane-xyz/hyperlane-monorepo", rev = "befc38d" }
hyperlane-ethereum = { git = "https://github.com/hyperlane-xyz/hyperlane-monorepo", branch = "main" }
tokio = { version = "1.16.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10.8"
serde_json = "1.0"
rand = "0.8"
futures = "0.3"
