[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = { workspace = true }
fuels = { workspace = true }
alloy = { version = "0.4.0", features = [
  "providers",
  "rpc-types",
  "transport-ws",

] }
alloy-provider = { version = "0.4.0", features = ["ws"] }
alloy-contract = { version = "0.4.0" }
alloy-rpc-types = { version = "0.4.2" }
futures-util = "0.3"
rand = "0.8.4"
dotenv = "0.15.0"


# alloy-signer = { workspace = true }
# alloy-signer-local = { workspace = true }
# alloy-primitives = { workspace = true }
tokio = { workspace = true }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
