[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.4.0", features = [
  "full",
  "providers",
  "rpc-types",
  "transport-ws",
] }
hex = { workspace = true }
fuels = { workspace = true }
alloy-provider = { version = "0.4.0", features = ["ws"] }
alloy-contract = { version = "0.4.0" }
alloy-rpc-types = { version = "0.4.2" }
alloy-transport-ipc = { version = "0.4.2" }
futures-util = "0.3"
rand = "0.8.4"
dotenv = "0.15.0"
tokio = { workspace = true }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9"
hyperlane-core = { workspace = true }
