[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"


[dependencies]
ethers = { git = "https://github.com/hyperlane-xyz/ethers-rs", tag = "2024-04-25" }
hyperlane-core = { git = "https://github.com/hyperlane-xyz/hyperlane-monorepo", rev = "f9bbdde" }
hyperlane-ethereum = { git = "https://github.com/hyperlane-xyz/hyperlane-monorepo", rev = "f9bbdde" }
fuels = "0.62.0"
serde = "1.0.147"
serde_json = "1.0"
