[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"


[dependencies]
ethers = { workspace = true }
hyperlane-core = { workspace = true }
# hyperlane-ethereum = { workspace = true }
fuels = { workspace = true }
eyre = "0.6.8"
ethers-signers = "2.0.14"
serde = { workspace = true }
serde_json = { workspace = true }
