[package]
name = "mailbox"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["mantasm"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.62.0", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }
hyperlane-core = { git = "https://github.com/hyperlane-xyz/hyperlane-monorepo", rev = "f9bbdde" }
ethers = { git = "https://github.com/hyperlane-xyz/ethers-rs", tag = "2024-04-25" }

# test-utils = { path = "../../test-utils" }


[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
