[package]
name = "validator-announce"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["Mantas M. <mantasm.dev@gmail.com>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-primitives = { workspace = true }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
