[package]
name = "merkle-tree-hook-test"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["mantasm"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { workspace = true }
tokio = { workspace = true }
hyperlane-core = { workspace = true }


[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
