[package]
name = "aggregation-ism"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["Mantas M. <mantasm.dev@gmail.com>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.65.1", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }
rand = { workspace = true }
futures = { workspace = true }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
