[package]
name = "merkle-test"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["mantasm"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
test-utils = { path = "../../../test-utils" }
hex = "0.4"

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
