[package]
name = "merkle-root-multisig-ism"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["Mantas M. <mantasm.dev@gmail.com>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { workspace = true }
tokio = { workspace = true }
hyperlane-core = { workspace = true }
sha3 = { workspace = true }
futures = { workspace = true }
test-utils = { path = "../../../../test-utils" }
hex = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-primitives = { workspace = true }
fuel-merkle = { version = "0.56.0" }


[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
